[gd_scene load_steps=32 format=3 uid="uid://bql38jl280n2v"]

[ext_resource type="Script" path="res://scripts/game/entities/enemies/shadowcat/root/shadowcat.gd" id="1_4gs5q"]
[ext_resource type="Script" path="res://scripts/game/stateMachine/stateMachine.gd" id="2_jv3w5"]
[ext_resource type="Script" path="res://scripts/game/entities/enemies/shadowcat/states/follow/shadowcatFollow.gd" id="3_43gr0"]
[ext_resource type="Script" path="res://scripts/game/entities/enemies/shadowcat/states/handAttack/shadowCatHandAttack.gd" id="4_c4h6e"]
[ext_resource type="PackedScene" uid="uid://bqhjmtojt74cb" path="res://scenes/game/entities/enemies/shadowcat/handAttack/shadowCatHandAttack.tscn" id="5_dmxw3"]
[ext_resource type="Script" path="res://scripts/game/entities/enemies/shadowcat/states/slashAttack/shadowCatSlashAttack.gd" id="6_ir7ye"]
[ext_resource type="Shader" uid="uid://jig5yuqtndky" path="res://assets/shaders/hitFlash/shader/hitFlash.tres" id="6_qxjwv"]
[ext_resource type="Texture2D" uid="uid://cv8j2g4teb7jd" path="res://assets/images/game/entities/enemies/shadowcat/follow/shadowcat1.png" id="7_8qu0x"]
[ext_resource type="Script" path="res://scripts/game/entities/enemies/shadowcat/slashAttack/direction.gd" id="7_rm1cr"]
[ext_resource type="PackedScene" uid="uid://d0xq8uv8usabh" path="res://scenes/game/entities/enemies/shadowcat/slashAttack/shadowCatSlashAttack.tscn" id="7_sx2ph"]
[ext_resource type="PackedScene" uid="uid://dux0jt7344boy" path="res://scenes/game/entities/enemies/bullet/enemyBullet.tscn" id="8_0wx6q"]
[ext_resource type="Texture2D" uid="uid://6avhyremw5m8" path="res://assets/images/game/entities/enemies/shadowcat/follow/shadowcat2.png" id="8_va8s7"]
[ext_resource type="Script" path="res://scripts/game/entities/components/healthComponent.gd" id="9_1qwo3"]
[ext_resource type="Texture2D" uid="uid://dxrat15nskt1q" path="res://assets/images/game/entities/enemies/shadowcat/follow/shadowcat3.png" id="9_htcue"]
[ext_resource type="Texture2D" uid="uid://dbrffxabad5mw" path="res://assets/images/game/entities/enemies/shadowcat/follow/shadowcat4.png" id="10_5fwig"]
[ext_resource type="Script" path="res://scripts/game/entities/components/hitboxComponent.gd" id="10_emljb"]
[ext_resource type="PackedScene" uid="uid://dpo7e5gsnvpxl" path="res://scenes/game/healthbar/healthbar.tscn" id="11_vigev"]
[ext_resource type="Texture2D" uid="uid://5ybufwnyvqgn" path="res://assets/images/game/entities/enemies/shadowcat/handAttack/shadowcat_handAttack1.png" id="11_x6q5c"]
[ext_resource type="Texture2D" uid="uid://mdoog8u1onu1" path="res://assets/images/game/entities/enemies/shadowcat/handAttack/shadowcat_handAttack2.png" id="12_64wts"]
[ext_resource type="PackedScene" uid="uid://btksra2mv38rs" path="res://scenes/game/entities/components/damageIndicatorComponent.tscn" id="12_74b4s"]
[ext_resource type="Texture2D" uid="uid://d0v6lypy0v85q" path="res://assets/images/game/entities/enemies/shadowcat/handAttack/shadowcat_handAttack3.png" id="13_d0d48"]
[ext_resource type="PackedScene" uid="uid://bjeomn7nw7vnr" path="res://scenes/game/entities/enemies/particles/shadowcatDeathParticle/shadowcatDeathParticle.tscn" id="15_kx1p8"]
[ext_resource type="Texture2D" uid="uid://bs6hb2mng68yj" path="res://assets/images/game/entities/enemies/shadowcat/idle/shadowCatIdle.png" id="15_p6043"]
[ext_resource type="PackedScene" uid="uid://d2iyywv1qgbw3" path="res://scenes/game/entities/enemies/damageSound/enemyDamageSound.tscn" id="16_7o0tf"]
[ext_resource type="AudioStream" uid="uid://drc2njixypxbm" path="res://assets/audio/game/entities/enemies/shadowcat/handAttack/handAttackSound.wav" id="17_udhjm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6obfp"]
resource_local_to_scene = true
shader = ExtResource("6_qxjwv")
shader_parameter/ENABLED = false
shader_parameter/tint = Color(0.941176, 0.964706, 0.941176, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_akcks"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_8qu0x")
}, {
"duration": 1.0,
"texture": ExtResource("8_va8s7")
}, {
"duration": 1.0,
"texture": ExtResource("9_htcue")
}, {
"duration": 1.0,
"texture": ExtResource("10_5fwig")
}],
"loop": true,
"name": &"follow",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_x6q5c")
}, {
"duration": 1.0,
"texture": ExtResource("12_64wts")
}, {
"duration": 1.0,
"texture": ExtResource("13_d0d48")
}],
"loop": false,
"name": &"handAttackEnter",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_d0d48")
}, {
"duration": 1.0,
"texture": ExtResource("12_64wts")
}, {
"duration": 1.0,
"texture": ExtResource("11_x6q5c")
}],
"loop": false,
"name": &"handAttackExit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_p6043")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3dinm"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/ENABLED")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ikiuk"]
resource_name = "hitFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/ENABLED")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mewus"]
_data = {
"RESET": SubResource("Animation_3dinm"),
"hitAnim": SubResource("Animation_ikiuk")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0bojf"]
radius = 4.0
height = 26.0

[node name="shadowcat" type="CharacterBody2D" groups=["enemy"]]
texture_filter = 1
collision_layer = 4
collision_mask = 5
script = ExtResource("1_4gs5q")

[node name="direction" type="Node2D" parent="."]
script = ExtResource("7_rm1cr")

[node name="stateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("2_jv3w5")
initialState = NodePath("follow")

[node name="follow" type="Node" parent="stateMachine" node_paths=PackedStringArray("stateTimer")]
script = ExtResource("3_43gr0")
moveSpeed = 85
stateTimer = NodePath("../stateTimer")

[node name="handAttack" type="Node" parent="stateMachine" node_paths=PackedStringArray("stateTimer")]
script = ExtResource("4_c4h6e")
handAttackScene = ExtResource("5_dmxw3")
stateTimer = NodePath("../stateTimer")

[node name="attackTimer" type="Timer" parent="stateMachine/handAttack"]
wait_time = 0.5

[node name="slashAttack" type="Node" parent="stateMachine" node_paths=PackedStringArray("direction")]
script = ExtResource("6_ir7ye")
direction = NodePath("../../direction")
slashAttackScene = ExtResource("7_sx2ph")
enemyBulletScene = ExtResource("8_0wx6q")

[node name="stateTimer" type="Timer" parent="stateMachine"]
wait_time = 5.0
one_shot = true

[node name="sprite" type="AnimatedSprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_6obfp")
sprite_frames = SubResource("SpriteFrames_akcks")
animation = &"idle"

[node name="hitAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mewus")
}

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_0bojf")

[node name="health" type="Node2D" parent="." node_paths=PackedStringArray("healthBar")]
script = ExtResource("9_1qwo3")
maxHealth = 30
healthBar = NodePath("../healthBar")
deathParticleScene = ExtResource("15_kx1p8")
damageSoundScene = ExtResource("16_7o0tf")

[node name="hitbox" type="Area2D" parent="." node_paths=PackedStringArray("hitAnim", "health", "damageIndicator") groups=["enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("10_emljb")
hitAnim = NodePath("../hitAnim")
health = NodePath("../health")
damageIndicator = NodePath("../damageIndicatorComponent")

[node name="col" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_0bojf")

[node name="healthBar" parent="." node_paths=PackedStringArray("health") instance=ExtResource("11_vigev")]
offset_left = -25.0
offset_top = 19.0
offset_right = 24.0
offset_bottom = 22.0
value = 0.0
health = NodePath("../health")

[node name="damageIndicatorComponent" parent="." instance=ExtResource("12_74b4s")]
position = Vector2(1, -24)

[node name="handAttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_udhjm")

[connection signal="timeout" from="stateMachine/handAttack/attackTimer" to="stateMachine/handAttack" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="stateMachine/stateTimer" to="stateMachine/follow" method="_on_state_timer_timeout"]
[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="animation_finished" from="sprite" to="stateMachine/handAttack" method="_on_sprite_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
